# prog04-jcracken-reupload

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  edge.cpp  edge.h  main.cpp  obj.cpp  obj.h  triangle.cpp  triangle.h  vect.cpp  vect.h  vector.cpp  vector.h
